# aurora_sim_v2

./: frames_2025-11-16_22.35.22.gv  frames_2025-12-15_05.35.29.gv  frames_2025-12-15_22.15.13.gv  frames_2025-12-15_22.21.03.gv  frames_2025-12-15_22.37.22.gv  frames_2025-12-16_18.55.33.gv  frames_2025-12-16_20.26.33.gv  frames_2025-12-17_01.10.32.gv  frames_2025-12-17_02.56.07.gv  frames_2025-12-17_03.12.54.gv  frames_2026-01-27_13.02.27.gv  frames_2026-01-27_13.14.09.gv  frames_2026-01-27_13.47.46.gv  frames_2026-01-27_14.01.53.gv  frames_2026-01-27_14.08.08.gv  frames_2026-01-27_14.15.07.gv  frames_2026-01-27_19.48.27.gv
install/: local_setup.sh  setup.sh
log/: latest_build
src/aurora1/: README.md  setup.cfg  setup.py
src/aurora1/description/: lidar.xacro  robot.urdf.xacro
src/aurora1/launch/: launch_sim.launch.py
src/aurora1/worlds/: obstacles.world
src/aurora_autonav/: package.xml  setup.cfg  setup.py
src/aurora_autonav/aurora_autonav/: checkpoint_geometry.py  (+3 more)
src/aurora_drive/: README.md  package.xml  setup.cfg  setup.py
src/aurora_drive/config/: controller_4ws.yaml  joystick.yaml  slam_toolbox.yaml
src/aurora_drive/description/: robot_core_4wd_v2.xacro  ros2_control_4wd_v2.xacro
src/aurora_drive/launch/: joystick_v2.launch.py  launch_sim_v2.launch.py  launch_sim_v3.launch.py
src/aurora_drive/models/aruco_1/: model.config  model.sdf
src/aurora_drive/models/aruco_1/materials/scripts/: gazebo.material
src/aurora_drive/rviz2/: obstacle_v2.rviz
src/aurora_drive/world/: obstacle.world
src/aurora_gps/: package.xml  setup.cfg  setup.py
(+139 files in other folders)
